# lumen-charts

./: .gitignore  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  RELEASING.md
assets/: lwc-parity.md
chart-core/: Cargo.toml  chart_core.h
chart-core/include/: chart_core.h
chart-core/src/: chart_model.rs  chart_options.rs  chart_renderer.rs  chart_state.rs  lib.rs  overlays.rs  price_scale.rs  series.rs  text_render.rs  tick_marks.rs  time_scale.rs
chart-core/tests/: vello_test.rs
chart-core/tests/parity/: data_layer.rs  main.rs  plot_list.rs  series.rs
chart-swift/: Package.swift
chart-swift/.build/: build.db  debug.yaml  plugin-tools.yaml
chart-swift/.build/arm64-apple-macosx/debug/: ChartDemo  plugin-tools-description.json
chart-swift/.build/arm64-apple-macosx/debug/ChartDemo.build/: ChartDemo.emit-module.d  main.d  main.swiftdeps  master.priors  output-file-map.json  sources
chart-swift/.build/arm64-apple-macosx/debug/ChartDemo.dSYM/Contents/: Info.plist
chart-swift/.build/arm64-apple-macosx/debug/ChartDemo.dSYM/Contents/Resources/DWARF/: ChartDemo
chart-swift/.build/arm64-apple-macosx/debug/ChartDemo.product/: Objects.LinkFileList
chart-swift/.build/arm64-apple-macosx/debug/ModuleCache/276PRSSVJJI72/: Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  CChartCore-65XC18HF683O.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreData-1KHK1L2CYC2N6.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreImage-39ZO87840M5PP.pcm  CoreText-3FAL1B4J38DIR.pcm  CoreTransferable-27T896KGHFB3R.pcm  CoreVideo-DBBGB2LXU3HG.pcm  DataDetection-R5W4QHNMPWVH.pcm  DeveloperToolsSupport-3SUCMSK9ZS2JA.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  IOSurface-26455DPS9NDS0.pcm  ImageIO-2ZSF831VT29UB.pcm  MachO-20RPYVQSX341K.pcm  Metal-1GCZV9N85NJOH.pcm  OSLog-218FBXNFJGY61.pcm  ObjectiveC-1G8H182PQX3QE.pcm  OpenGL-H89XJT7GTCP.pcm  QuartzCore-39A8LQKF980J1.pcm  Security-3QCVXOV25KK54.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  SwiftUICore-86HIVXUC6WOA.pcm  Symbols-3KC1789KJFX94.pcm  UniformTypeIdentifiers-1OLJP4K3PLM48.pcm  XPC-T0ZXCAST7PE3.pcm  _AvailabilityInternal-2YSBQADOLX02V.pcm  _Builtin_float-19KE09ZDXQ6Q3.pcm  _Builtin_intrinsics-19KE09ZDXQ6Q3.pcm  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm  _Builtin_limits-19KE09ZDXQ6Q3.pcm  _Builtin_stdarg-19KE09ZDXQ6Q3.pcm  _Builtin_stdatomic-19KE09ZDXQ6Q3.pcm  _Builtin_stdbool-19KE09ZDXQ6Q3.pcm  _Builtin_stddef-19KE09ZDXQ6Q3.pcm  (+16 more)
chart-swift/.build/arm64-apple-macosx/debug/Modules/: ChartDemo.swiftdoc  ChartDemo.swiftmodule  ChartDemo.swiftsourceinfo
chart-swift/.build/arm64-apple-macosx/debug/index/store/v5/units/: Accessibility-RCJSN2GG3RAR.pcm-2UFZM4G2UZ0GL  AppKit-2VI8NB39I5AT6.pcm-2CMB8SCV18HDG  ApplicationServices-3NXEUUZF9JJBD.pcm-38PCXZNEK7JQ6  CChartCore-65XC18HF683O.pcm-X49P79CW1DG6  CFNetwork-1PNPO1ORVQZLS.pcm-31ABTRFZE7W9Q  CUPS-1HLHMKUB322XA.pcm-31XWNOJ5XWT27  ColorSync-3EIM4S8RXNRVI.pcm-1WEEGGM2PQ85T  CoreData-1KHK1L2CYC2N6.pcm-YKICS8WN3ALK  CoreFoundation-16SA8WK3L6MQN.pcm-123U6WZFRI5GS  CoreGraphics-1PSDCAYCIV3T9.pcm-1UX8M4YNCQHON  CoreImage-39ZO87840M5PP.pcm-1W9OMJQGWGKYS  CoreServices-39NCTJOEW7PQ2.pcm-1ZKU4JF1EJYBU  CoreText-3FAL1B4J38DIR.pcm-91B29F2CHZDS  CoreTransferable-27T896KGHFB3R.pcm-1EGTMF6IAQTNP  CoreVideo-DBBGB2LXU3HG.pcm-2F2M46M0S3Y2R  Darwin-1FXX23EKWOBA9.pcm-MIYGMJM7GPNB  DataDetection-R5W4QHNMPWVH.pcm-2DLZW9WL0O3D3  DeveloperToolsSupport-3SUCMSK9ZS2JA.pcm-2OKN5XZ3UOUFY  DiskArbitration-3LBJF5I58QD8.pcm-3EKI6SMUV2C1W  Dispatch-R76HXUP80TVL.pcm-I8QFZYFQZO6C  Foundation-24LYWIP48SHNP.pcm-CQX719X1CG9G  IOKit-1IAL9NTK1TABA.pcm-1RK62N0TOOIRD  IOSurface-26455DPS9NDS0.pcm-IVCANZ7H7BHW  ImageIO-2ZSF831VT29UB.pcm-HP6O6170JJE1  MachO-20RPYVQSX341K.pcm-15LENNBY1IQTX  Metal-1GCZV9N85NJOH.pcm-ZV3SPG8KL6ZC  OSLog-218FBXNFJGY61.pcm-1Z9AK3NTRL3FQ  ObjectiveC-1G8H182PQX3QE.pcm-MXMGYJATMWR0  OpenGL-H89XJT7GTCP.pcm-3TEP7AMLHR7MZ  QuartzCore-39A8LQKF980J1.pcm-3TCRD7KL100QA  Security-3QCVXOV25KK54.pcm-3EY4JNPW4FJIM  SwiftUICore-86HIVXUC6WOA.pcm-23XO6ED14CEVL  Symbols-3KC1789KJFX94.pcm-34RX9SDZDY6ZL  UniformTypeIdentifiers-1OLJP4K3PLM48.pcm-3FAYFUEGLHORF  XPC-T0ZXCAST7PE3.pcm-2RLT78LOGIS72  _AvailabilityInternal-2YSBQADOLX02V.pcm-AFSU28H4S1BC  _Builtin_float-19KE09ZDXQ6Q3.pcm-ENFWKHICO15B  (+53 more)
chart-swift/Sources/CChartCore/: chart_core.h
chart-swift/Sources/ChartDemo/: main.swift
chart-swift/Sources/LightweightCharts/: Chart.swift  Options.swift  SeriesAPI.swift
chart-wasm/: Cargo.toml  index.html
chart-wasm/src/: lib.rs
core/: Cargo.toml
core/include/: chart_core.h
core/src/: backend_canvas2d.rs  backend_femtovg.rs  backend_vello.rs  chart_options.rs  chart_renderer.rs  chart_state.rs  color.rs  data_layer.rs  draw_backend.rs  formatters.rs  invalidation.rs  lib.rs  overlays.rs  price_scale.rs  sample_data.rs  scale.rs  series.rs  text_render.rs  tick_marks.rs  time_scale.rs
core/src/backends/: canvas2d.rs  mod.rs  vello.rs
core/src/renderers/: canvas2d.rs  mod.rs  vello.rs
core/tests/: cabi_callback_tests.rs  draw_backend_tests.rs  invalidation_integration.rs
core/tests/parity/: color.rs  data_layer.rs  formatters.rs  plot_list.rs  price_scale.rs  series.rs  tick_mark_formatter.rs  time_scale.rs  timed_data.rs
examples/rust-demo/: Cargo.toml  run.sh
examples/rust-demo/src/: main.rs
examples/swift-demo/: Package.swift  run.sh
examples/swift-demo/Sources/ChartDemo/: main.swift
examples/web-canvas-demo/: index.html  run.sh
examples/web-demo/: index.html  run.sh
examples/webgpu-demo/: index.html
rust-sdk/: Cargo.toml  LICENSE  README.md
rust-sdk/src/: lib.rs
sdk/: Cargo.toml
sdks/: README.md
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: lib.rs
sdks/swift/: Package.swift
sdks/swift/Sources/CChartCore/: chart_core.h  module.modulemap
sdks/swift/Sources/LightweightCharts/: Chart.swift  DataTypes.swift  SeriesAPI.swift
sdks/swift/Sources/LumenCharts/: DataTypes.swift  SeriesAPI.swift
sdks/wasm/: Cargo.toml  README.md  chart_api.js
sdks/wasm/src/: lib.rs
src/: lib.rs
(+3 files in other folders)
