[workspace]
members = ["core", "rust-sdk", "sdks/wasm", "examples/rust-demo"]
default-members = [".", "core", "rust-sdk", "examples/rust-demo"]
resolver = "2"

[package]
name = "lumen-charts"
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Jagtesh Chadha"]
description = "GPU-accelerated charting library inspired by Lightweight Charts, built on Vello + wgpu"
repository = "https://github.com/jagtesh/lumen-charts"
homepage = "https://github.com/jagtesh/lumen-charts"
readme = "README.md"
keywords = ["chart", "gpu", "vello", "wgpu", "trading"]
categories = ["graphics", "rendering", "visualization"]
rust-version = "1.75"

[features]
default = []
femtovg-backend = [
    "lumen-charts-core/femtovg-backend",
    "lumen-charts-sdk/femtovg-backend",
]

[dependencies]
lumen-charts-core = { path = "core", version = "2.0.1" }
lumen-charts-sdk = { path = "rust-sdk", version = "1.0.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
lumen-charts-wasm = { path = "sdks/wasm", version = "1.0.1" }
