[package]
name = "lumen-charts"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Jagtesh Chadha"]
description = "GPU-accelerated charting library inspired by Lightweight Charts"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
vello = "0.4"
vello_encoding = "0.4"
skrifa = "0.26"
parley = "0.7"
pollster = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
