[package]
name = "lumen-charts"
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Jagtesh Chadha"]
description = "GPU-accelerated charting library inspired by Lightweight Charts, built on Vello + wgpu"
repository = "https://github.com/jagtesh/lumen-charts"
homepage = "https://github.com/jagtesh/lumen-charts"
readme = "../README.md"
keywords = ["chart", "gpu", "vello", "wgpu", "trading"]
categories = ["graphics", "rendering", "visualization"]
rust-version = "1.75"

[features]
default = []
femtovg-backend = ["dep:femtovg"]

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
vello = "0.4"
vello_encoding = "0.4"
skrifa = "0.26"
parley = "0.7"
pollster = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
femtovg = { version = "0.9", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "TextMetrics",
    "CanvasGradient",
    "Document",
    "Window",
] }
