[package]
name = "lumen-charts-sdk"
version = "1.0.0"
edition = "2021"
authors = ["Jagtesh Chadha"]
description = "Safe, idiomatic Rust SDK for Lumen Charts (v5 API compatible)"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jagtesh/lumen-charts"
homepage = "https://github.com/jagtesh/lumen-charts"
publish = true

[dependencies]
lumen-charts-core = "2.0.0"
serde_json = "1"
