[package]
name = "lumen-charts-sdk"
version = "1.0.2"
edition = "2021"
authors = ["Jagtesh Chadha"]
description = "Safe, idiomatic Rust SDK for Lumen Charts (v5 API compatible)"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jagtesh/lumen-charts"
homepage = "https://github.com/jagtesh/lumen-charts"
publish = true

[features]
default = []
femtovg-backend = ["lumen-charts-core/femtovg-backend"]

[dependencies]
lumen-charts-core = { path = "../core", version = "2.0.2" }
serde_json = "1"
