[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"
authors = ["Jagtesh Chadha"]
publish = false

[dependencies]
lumen-charts = { path = "../..", version = "2.0.0" }
vello = "0.4"
winit = "0.30"
wgpu = "23"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
egui = "0.30"
egui-wgpu = "0.30"
egui-winit = "0.30"
