[package]
name = "lumen-charts-wasm"
version = "1.0.1"
edition = "2021"
authors = ["Jagtesh Chadha"]
description = "Safe, idiomatic WASM SDK for Lumen Charts (v5 API compatible)"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jagtesh/lumen-charts"
homepage = "https://github.com/jagtesh/lumen-charts"
publish = true

[features]
default = []
femtovg-backend = ["lumen-charts-core/femtovg-backend"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lumen-charts-core = { path = "../../core", version = "2.0.1" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "GpuCanvasContext",
    "CanvasRenderingContext2d",
    "console",
] }
js-sys = "0.3"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
vello = "0.4"
serde_json = "1"
